利用 multi-tty 快速启动 Emacs。
- 增加启动 Emacs 的辅助脚本
- 在 .bash_profile 中检测系统是否安装了 dtach 或者 screen
- 根据 dtach 或者 screen 安装情况使用不同的脚本启动 Emacs
- .screenrc 中自动打开多窗口的功能有冲突，暂时禁止

--- a/.screenrc
+++ b/.screenrc
@@ -1,3 +1,5 @@
+# -*- conf -*-
+
 # 和256色相关的配置
 term xterm-256color
 attrcolor b ".I"
@@ -41,13 +43,14 @@ bind 'I' login on
 bind 'O' login off
 bind '}' history
 
-# 自动打开一些窗口，在打开前可以用 chdir 切换到指定目录（不指定为 $HOME)
-screen -t emacs 0 emacs -nw
-screen -t shell 1
-chdir $HOME/devspace
-screen -t devspace 2
-screen -t su 3 sudo su -
-select 0
+# 自动打开一些窗口，在打开前可以用 chdir 切换到指定目录
+# （如果不指定目录，缺省为 $HOME)
+# screen -t emacs 0 emacs -nw
+# screen -t shell 1
+# chdir $HOME/devspace
+# screen -t devspace 2
+# screen -t su 3 sudo su -
+# select 0
 
 # 用于显示额外信息的外部程序
 backtick 1 5 5 $HOME/bin/sc_sysload
