解决 .screenrc 中自动打开多窗口的功能和 multi-tty Emacs 脚本冲突的问题。
- preload-emacs-screen 中的 screen 命令指定用 /etc/screenrc，
  实验发现用 /dev/null 也可以
- 重新启用 .screenrc 中自动打开多窗口功能
- 自动打开窗口时不能用 et，似乎不支持别名
- 在 .bashrc 中增加几个 screen 命令的别名

--- a/.screenrc
+++ b/.screenrc
@@ -1,5 +1,8 @@
 # -*- conf -*-
 
+# screen 的初始化文件
+# 系统的全局初始化文件在 /etc/screenrc
+
 # 和256色相关的配置
 term xterm-256color
 attrcolor b ".I"
@@ -45,12 +48,12 @@ bind '}' history
 
 # 自动打开一些窗口，在打开前可以用 chdir 切换到指定目录
 # （如果不指定目录，缺省为 $HOME)
-# screen -t emacs 0 emacs -nw
-# screen -t shell 1
-# chdir $HOME/devspace
-# screen -t devspace 2
-# screen -t su 3 sudo su -
-# select 0
+screen -t emacs 0
+screen -t shell 1
+chdir $HOME/devspace
+screen -t devspace 2
+screen -t su 3 sudo su -
+select 0
 
 # 用于显示额外信息的外部程序
 backtick 1 5 5 $HOME/bin/sc_sysload
