--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,58 @@
-.bash_history
-.cache/*
-.config/*
-.cvspass
-.dbus/*
-.emacs.bmk
-.emacs.desktop
-.emacs.desktop.lock
-.session
-.emacs.d/auto-backup/*
-.emacs.d/auto-save-list/*
-.emacs.d/elisp-3rdparty
-.emacs.d/elisp-3rdparty/*
-.emacs.d/.diary
-.emacs.d/info/*
-.esd_auth
-.eshell/*
-.fastri-index
-.gconfd/*
-.gem
-.gitconfig
-.gitk
-.gnome/*
-.gnuplot_history
-.ido.last
-.irb_history
-.lesshst
-.local/*
-.mc/*
-.mozilla/*
-.netrc
-.privatebashrc
-.pulse-cookie
-.qt/*
-.recently-used.xbel
-.sdcv_history
-.ssh
-.subversion/*
-.synaptic/*
-.tor/*
-.viminfo
-.w3m/*
-.xmms/*
-bin/cscope-indexer
-devspace/*
-muse/*
-repos/*
-tmp/*
-windows
-workspace/*
+/.appcfg_cookies
+/.appcfg_nag
+/.authinfo
+/.bash_history
+/.cache/*
+/.config/*
+/.cvspass
+/.dbus/*
+/.emacs.bmk
+/.emacs.d/auto-backup/*
+/.emacs.d/auto-save-list/*
+/.emacs.d/elisp-3rdparty
+/.emacs.d/elisp-3rdparty/*
+/.emacs.d/.diary
+/.emacs.d/.emacs.desktop
+/.emacs.d/.emacs.desktop.lock
+/.emacs.d/gnus/*
+/.emacs.d/.session
+/.emacs.d/info/*
+/.esd_auth
+/.eshell/*
+/.fastri-index
+/.fcitx/*
+/.gconfd/*
+/.gem
+/.gitconfig
+/.gitk
+/.gnome/*
+/.gnupg/*
+/.gnuplot_history
+/.htoprc
+/.ido.last
+/.irb_history
+/.lesshst
+/.local/*
+/.mc/*
+/.mozilla/*
+/.netrc
+/.privatebashrc
+/.pulse-cookie
+/.qt/*
+/.recently-used.xbel
+/.sdcv_history
+/.ssh
+/.subversion/*
+/.synaptic/*
+/.tor/*
+/.viminfo
+/.w3m/*
+/.xinput.d/*
+/.xmms/*
+/bin/*
+/devspace/*
+/muse/*
+/repos/*
+/tmp/*
+/windows
+/workspace/*
