忽略一些软件自动生成的配置文件和目录。

--- a/.gitignore
+++ b/.gitignore
@@ -7,20 +7,24 @@
 /.cvspass
 /.dbus/*
 /.emacs.bmk
+/.emacs.d/.diary
+/.emacs.d/.emacs.desktop
+/.emacs.d/.emacs.desktop.lock
+/.emacs.d/.ido.last
+/.emacs.d/.session
 /.emacs.d/auto-backup/*
 /.emacs.d/auto-save-list/*
 /.emacs.d/elisp-3rdparty
 /.emacs.d/elisp-3rdparty/*
-/.emacs.d/.diary
-/.emacs.d/.emacs.desktop
-/.emacs.d/.emacs.desktop.lock
 /.emacs.d/gnus/*
-/.emacs.d/.session
+/.emacs.d/gtd/*
 /.emacs.d/info/*
+/.emacs.d/tramp
 /.esd_auth
 /.eshell/*
 /.fastri-index
 /.fcitx/*
+/.fontconfig/*
 /.gconfd/*
 /.gem
 /.gitconfig
@@ -29,10 +33,10 @@
 /.gnupg/*
 /.gnuplot_history
 /.htoprc
-/.ido.last
 /.irb_history
 /.lesshst
 /.local/*
+/.mailrc
 /.mc/*
 /.mozilla/*
 /.msmtprc
@@ -42,14 +46,18 @@
 /.qt/*
 /.recently-used.xbel
 /.rnd
+/.scim/*
 /.sdcv_history
 /.ssh
 /.subversion/*
 /.synaptic/*
+/.texmf-var/*
 /.tor/*
 /.viminfo
+/.vnc/*
 /.w3m/*
 /.xinput.d/*
+/.Xauthority
 /.xmms/*
 /bin/*
 /devspace/*
