更新 .gitignore，增加一些需要忽略的文件和目录。

--- a/.gitignore
+++ b/.gitignore
@@ -1,21 +1,19 @@
 /.appcfg_cookies
 /.appcfg_nag
+/.aptitude/*
+/.aspell.en.prepl
 /.authinfo
 /.bash_history
 /.cache/*
 /.config/*
 /.cvspass
 /.dbus/*
-/.emacs.d/.diary
-/.emacs.d/.emacs.bmk
-/.emacs.d/.emacs.desktop
-/.emacs.d/.emacs.desktop.lock
-/.emacs.d/.ido.last
-/.emacs.d/.session
+/.emacs.d/.*
 /.emacs.d/auto-backup/*
 /.emacs.d/auto-save-list/*
 /.emacs.d/elisp-3rdparty
 /.emacs.d/elisp-3rdparty/*
+/.emacs.d/memos/*
 /.emacs.d/gnus/*
 /.emacs.d/gtd/*
 /.emacs.d/info/*
@@ -63,7 +61,10 @@
 /.xmms/*
 /devspace/*
 /muse/*
+/public_html/*
+/rel/*
 /repos/*
 /tmp/*
 /windows
 /workspace/*
+/*.pdf
