--- a/.fvwm/config
+++ b/.fvwm/config
@@ -147,6 +147,43 @@ AddToFunc ShowDesk
 + I All (AcceptsFocus CurrentPage !Iconic !Shaded) Thumbnail
 + I TestRc (NoMatch) All (CurrentPage Iconic) Iconify
 
+DestroyFunc AutoHide
+AddToFunc   AutoHide
++ I ThisWindow ($0) Deschedule $[w.id]
++ I TestRc (!Match) Deschedule -$[w.id]
++ I ThisWindow ($0) ThisWindow (shaded) AutohideShow $1 $3
++ I TestRc (!Match) All ($0, !shaded) AutohideHide $2 $3
+
+DestroyFunc AutohideShow
+AddToFunc   AutohideShow
++ I Schedule $0 -$[w.id] WindowShade $1 off
++ I Schedule $0 -$[w.id] Raise
++ I Schedule $0 -$[w.id] Deschedule $[w.id]
++ I Schedule $0 -$[w.id] Deschedule -$[w.id]
+
+DestroyFunc AutohideHide
+AddToFunc   AutohideHide
++ I Schedule $0 $[w.id] WindowShade $1 on
++ I Schedule $0 $[w.id] Deschedule $[w.id]
++ I Schedule $0 $[w.id] Deschedule -$[w.id]
+
+DestroyFunc FuncDockLaunch
+AddToFunc   FuncDockLaunch
++ C Any ($1) Next ($1) WindowListFunc
++ C TestRc (NoMatch) Exec $0
++ H Any ($1) WindowList ($1) Rectangle +$2+$3 0 -100m CurrentAtEnd UseListSkip SortByClass NoCurren
+tDeskTitle
++ D Exec $0
+
+DestroyFunc StartDocker
+AddToFunc   StartDocker
++ I AutoHide DockPanel 0 0 S
+
+DestroyFunc DockPanelAutoEnter
+AddToFunc   DockPanelAutoEnter
++ I AutoHide DockPanel 100 3600 S
+
+
 ######################################################################
 ## 用于启动程序的函数
 ######################################################################
@@ -186,8 +223,11 @@ AddToFunc   InitFunction
 # StartFunction：FVWM 启动和重启时调用
 DestroyFunc StartFunction
 AddToFunc   StartFunction
-+ I Module FvwmTaskBar
 + I Module FvwmButtons MainPanel
++ I Module FvwmButtons DockPanel
++ I Module FvwmAuto FvwmAutoHide -menter DockPanelAutoEnter
++ I Function StartDocker
++ I Module FvwmTaskBar
 + I Module FvwmAnimate          # 最小化为图标以及还原时的动画效果
 # + I Module FvwmAuto 500 Raise Nop
 
@@ -201,6 +241,7 @@ DestroyFunc ExitFunction
 AddToFunc ExitFunction
 + I KillModule FvwmButtons
 + I KillModule FvwmTaskBar
++ I KillModule DockPanel
 
 
 ######################################################################
@@ -526,12 +567,12 @@ DestroyModuleConfig FvwmPager: *
 ######################################################################
 
 Style "FvwmButtons" NoTitle, NoHandles, BorderWidth 0, Sticky,\
-  WindowListSkip,CirculateSkip, StaysOnBottom, FixedPosition, \
+  WindowListSkip, CirculateSkip, StaysOnBottom, FixedPosition, \
   FixedSize, !Iconifiable
 
 DestroyModuleConfig MainPanel: *
 *MainPanel: Back LightGoldenrodYellow
-*MainPanel: Geometry 100x500-0+0
+*MainPanel: Geometry 100x500-0+12
 *MainPanel: Rows 10             # 把整个 MainPanel 划分为
 *MainPanel: Columns 2           # 10 行 2 列
 *MainPanel: Frame 0             # 0 表示不显示各个区域之间的分隔线
@@ -548,6 +589,30 @@ DestroyModuleConfig MainPanel: *
 *MainPanel: (2x4, Swallow "FvwmPager", "FvwmPager 0 2")
 
 
+Style DockPanel NoTitle, Sticky, Handlewidth 0, Borderwidth 0, WindowListSkip, StaysOnTop
+Colorset 50 fg #ffffff, bg #4584b5, hi gray, sh gray, RootTransparent buffer, IconAlpha 75, Tint #4
+584b5 0
+Colorset 51 fg #ffffff, bg #7f7f7f, hi gray, sh gray, RootTransparent buffer, IconAlpha 100, Tint #4584b5 0
+
+DestroyModuleConfig DockPanel: *
+*DockPanel: Geometry 132x66+200-0
+*DockPanel: Colorset 50
+*DockPanel: ActiveColorset 51
+*DockPanel: Rows    1
+*DockPanel: Columns 2
+*DockPanel: Frame   0
+*DockPanel: Padding 1 1
+*DockPanel: (1x1, ActionOnPress, \
+             Icon 48x48/terminal.png, \
+             ActiveIcon 64x64/terminal.png, \
+             Action(Mouse 1) `FuncDockLaunch rxvt *rxvt $left $top`, \
+             `Next (*rxvt) Popup MenuWindowOptions Rectangle +$left +$top 0 -100m`)
+*DockPanel: (1x1, ActionOnPress, \
+             Icon 48x48/exit.png, \
+             ActiveIcon 64x64/exit.png, \
+             Action(Mouse 1) `FuncDockLaunch rxvt *rxvt $left $top`, \
+             `Next (*rxvt) Popup MenuWindowOptions Rectangle +$left +$top 0 -100m`)
+
 ######################################################################
 ## FvwmTaskBar
 ######################################################################
@@ -558,7 +623,7 @@ Style "FvwmTaskBar" NoTitle, !Handles, !Borders, Sticky, WindowListSkip, \
   CirculateSkip, StaysOnBottom, FixedPosition, FixedSize, !Iconifiable
 
 DestroyModuleConfig FvwmTaskBar: *
-*FvwmTaskBar: Geometry +0-0
+*FvwmTaskBar: Geometry +0+0
 *FvwmTaskBar: Rows 1            # 只显示一行程序。如果程序比较多，可以设置多行
 *FvwmTaskBar: Font "xft:Consolas:Bold:pixelsize=12:minispace=True:antialias=True"
 *FvwmTaskBar: SelFont "xft:Consolas:Bold:pixelsize=12:minispace=True:antialias=True"
